theme/uiExtensions/devicesList-filters.less
@import (reference) "../__mixins__";
@import (reference) "../__ndwVars__";

.ndm-page-header {
    .header {
        &__title {
            display: flex;
            flex-wrap: wrap;
        }

        ndm-help {
            margin-left: @new-unit;
        }

        .devices-lists__filter-toggle {
            .__mixin__flex-container(row, center);

            margin: 0 0 0 auto;
            width: auto;

            .mobile({
                width: 100%;
            });

            .ndm-checkbox {
                align-items: center;

                .description {
                    min-width: unset;
                    color: @dt__white-text
                }

                .checkbox {
                    line-height: normal;
                }

                .form__cell.form__cell--checkbox {
                    height: 24px;
                    padding-top: 3px;
                }
            }
        }
    }
}

@reg-table-header: ~"devices-list.registered-devices.header";

.ndm-checkbox {
    &--dark { // theme-specific

        .form__cell-note,
        .form__cell--input-label {
            max-width: none !important;
            width: auto !important;
            font-size: 13px;
        }
    }

    .form__cell.form__cell--input-label {
        padding-right: 14px;
    }
}

.page-devices-list {

    .ndm-title.tretiary-title {
        @filters-toolbar-height-mobile: 70px;

        .__mixin__flex-row();

        position: relative;
        display: flex;
        flex-direction: row;
        align-items: baseline;

        & > span[ng-transclude] {
            .__mixin__flex-row();

            margin-left: 8px;
        }

        .tablet-and-laptop({
            height: 35px;

            &.__filters-are-visible {
                & > span:not([ng-transclude]) {
                    .ellipsis();
                }
            }
        });

        .mobile({
            &.__filters-are-visible {
                height: @filters-toolbar-height-mobile;
            }
        });

        &[label="@{reg-table-header}"] {
            .mobile({
                &.__filters-are-visible {
                    height: @filters-toolbar-height-mobile + 40px;
                }
            });
        }


        .kdte-filters-toolbar { // theme-specific
            display: inline-flex;
            flex-direction: row;

            .tablet({
                left: 8px;
            });

            .mobile({
                position: absolute;
                flex-direction: column;
                top: 24px;
                padding-top: 0;
                left: 0;
            });

            .ndm-checkbox {
                position: relative;
                top: 4px;
                align-items: flex-start;
            }

            .form__cell.form__cell--checkbox {
                padding-top: 0;
            }
        }
    }

    .ndm-title[label="@{reg-table-header}"] {
        .mobile({
            position: relative;
        });

        .__inline-flex-row {
            position: relative;
            top: -2px;

            .mobile({
                position: static;
            });
        }

        ndm-help {
            height: 28px;
            position: relative;
            top: 2px;
        }
    }

    .mobile({
        .table_devices-list tr.hidden-table-row {
            position: absolute;
            bottom: 1px;
            left: 1px;

            &, & * {
                font-size: 0 !important;
                line-height: 0 !important;
                padding: 0 !important;
                margin: 0 !important;
            }
        }
    });
}

